Sanmita/Dates/Expectations-ProjectProposal.ipynb

--- a/00-ProjectProposal.ipynb
+++ b/00-ProjectProposal.ipynb
@@ -245,9 +245,12 @@
     "  \n",
     "Read over the [COGS108 Team Policies](https://github.com/COGS108/Projects/blob/master/COGS108_TeamPolicies.md) individually. Then, include your group’s expectations of one another for successful completion of your COGS108 project below. Discuss and agree on what all of your expectations are. Discuss how your team will communicate throughout the quarter and consider how you will communicate respectfully should conflicts arise. By including each member’s name above and by adding their name to the submission, you are indicating that you have read the COGS108 Team Policies, accept your team’s expectations below, and have every intention to fulfill them. These expectations are for your team’s use and benefit — they won’t be graded for their details.\n",
     "\n",
-    "* *Team Expectation 1*\n",
-    "* *Team Expectation 2*\n",
-    "* *Team Expecation 3*\n",
+    "* *Comunication and Meetings: We will primarly communicate via iMessage for quick updates and questions throughout the week while using Github for tracking code and progress. Team members are expected to respond within 24 weekdays and in a timely manner when deadlines approach! We will meet atleast once to check progress and plan next steps. *\n",
+    "* *Respect: We agree to communicate respectfully and constructively, giving reasonable feedback and understand to not criticize individuals. *\n",
+    "* *Decision Making: Major decisions will be discussed as a group and decided by consensus/majority vote. *\n",
+    "* *Task Distribution: Tasks will be divided based on individual strengths and interests (e.g., data wrangling, analysis, writing), but all members are expected to contribute to every major aspect of the project. We will track responsibilities and deadlines using GitHub commits and shared notes. If ussues arise, everyone should communicate early! *\n",
+    "* *Conflict: If a team member is struggling with a task, they should let the others know asap to redistribute tasks.*\n",
+
     "* ..."
    ]
   },
@@ -274,13 +277,13 @@
     "\n",
     "| Meeting Date  | Meeting Time| Completed Before Meeting  | Discuss at Meeting |\n",
     "|---|---|---|---|\n",
-    "| 1/20  |  1 PM | Read & Think about COGS 108 expectations; brainstorm topics/questions  | Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research | \n",
-    "| 1/26  |  10 AM |  Do background research on topic | Discuss ideal dataset(s) and ethics; draft project proposal | \n",
-    "| 2/1  | 10 AM  | Edit, finalize, and submit proposal; Search for datasets  | Discuss Wrangling and possible analytical approaches; Assign group members to lead each specific part   |\n",
-    "| 2/14  | 6 PM  | Import & Wrangle Data (Ant Man); EDA (Hulk) | Review/Edit wrangling/EDA; Discuss Analysis Plan   |\n",
-    "| 2/23  | 12 PM  | Finalize wrangling/EDA; Begin Analysis (Iron Man; Thor) | Discuss/edit Analysis; Complete project check-in |\n",
-    "| 3/13  | 12 PM  | Complete analysis; Draft results/conclusion/discussion (Wasp)| Discuss/edit full project |\n",
-    "| 3/20  | Before 11:59 PM  | NA | Turn in Final Project & Group Project Surveys |"
+    "| 2/4  |  6 PM | RFinalize and submit Project Proposal, Brainstorm data collection strategies/topic  | Confirm communication norms; assign roles and responsibilies between coding/research; discuss hypothesis; start background research | \n",
+    "| 2/11  |  8 PM |  Identify potential datasets; review data availability and ethics considerations | Select final dataset; plan data wrangling approach | \n",
+    "| 2/18  | 8 PM  | Import and clean dataset; begin exploratory data analysis | Review wrangling and EDA; identify patterns and data limitations; Assign group members to lead each specific part   |\n",
+    "| 2/23  | 6 PM  | Import & Wrangle Data; EDA-- Finalize cleaned dataset and begin Analysis | Prepare and submit Checkpoint #1: Data; finalize analysis plan |\n",
+    "| 3/4  | 6 PM  | Conduct formal analyses and generate visualizations | Review analysis results; prepare Checkpoint #2: EDA |\n",
+    "| 3/13  |7 PM  | Complete analysis; draft results, discussion, and conclusion sections| Edit and refine full project; finalize narrative and interpretations |\n",
+    "| 3/20  | 10 P  | Final proofreading, polishing code and visualizations | Submit final project, video, and complete team evaluation surveys |"
    ]
   }
  ],
