Format ethics checklist and address relevant items

--- a/00-ProjectProposal.ipynb
+++ b/00-ProjectProposal.ipynb
@@ -192,36 +192,71 @@
     "### A. Data Collection\n",
     " - [X] **A.1 Informed consent**: If there are human subjects, have they given informed consent, where subjects affirmatively opt-in and have a clear understanding of the data uses to which they consent?\n",
     "\n",
-    "> Example of how to use the checkbox, and also of how you can put in a short paragraph that discusses the way this checklist item affects your project.  Remove this paragraph and the X in the checkbox before you fill this out for your project\n",
+    "    Participants will provide informed consent before completing the survey, with clear information about what data is being collected and how it will be used. A primary concern is the privacy paradox, where participants may share sensitive personal information without grasping the long-term implications of that data being recorded, such as precise daily routines. Because the study relies on self-reported metrics for mood and attention, it is important that participants understand both the purpose of the study and how their responses will be handled.\n",
     "\n",
-    " - [ ] **A.2 Collection bias**: Have we considered sources of bias that could be introduced during data collection and survey design and taken steps to mitigate those?\n",
-    " - [ ] **A.3 Limit PII exposure**: Have we considered ways to minimize exposure of personally identifiable information (PII) for example through anonymization or not collecting information that isn't relevant for analysis?\n",
-    " - [ ] **A.4 Downstream bias mitigation**: Have we considered ways to enable testing downstream results for biased outcomes (e.g., collecting data on protected group status like race or gender)?\n",
+    " - [X] **A.2 Collection bias**: Have we considered sources of bias that could be introduced during data collection and survey design and taken steps to mitigate those?\n",
+    "\n",
+    "    Since the data is self-reported, there is a high risk of social desirability bias. Students may underreport their actual screen time on platforms like TikTok or overreport their academic productivity to appear more disciplined. This limitation will be acknowledged when interpreting the results.\n",
+    "       \n",
+    " - [X] **A.3 Limit PII exposure**: Have we considered ways to minimize exposure of personally identifiable information (PII) for example through anonymization or not collecting information that isn't relevant for analysis?\n",
+    "\n",
+    "    To reduce privacy risks, we will avoid collecting personally identifiable information such as names, email addresses, or exact locations. Only information that is necessary for analysis will be collected, and responses will be anonymized.\n",
+    "       \n",
+    " - [X] **A.4 Downstream bias mitigation**: Have we considered ways to enable testing downstream results for biased outcomes (e.g., collecting data on protected group status like race or gender)?\n",
+    "\n",
+    "    We will collect limited demographic information, such as gender and region, to allow for subgroup analysis. This helps identify whether observed patterns differ across groups and prevents conclusions that reflect only a single demographic experience.\n",
     "\n",
     "### B. Data Storage\n",
-    " - [ ] **B.1 Data security**: Do we have a plan to protect and secure data (e.g., encryption at rest and in transit, access controls on internal users and third parties, access logs, and up-to-date software)?\n",
-    " - [ ] **B.2 Right to be forgotten**: Do we have a mechanism through which an individual can request their personal information be removed?\n",
-    " - [ ] **B.3 Data retention plan**: Is there a schedule or plan to delete the data after it is no longer needed?\n",
+    " - [X] **B.1 Data security**: Do we have a plan to protect and secure data (e.g., encryption at rest and in transit, access controls on internal users and third parties, access logs, and up-to-date software)?\n",
+    "\n",
+    "    All data will be stored securely with access limited to group members. The dataset will be kept in protected environments and will not be shared outside the course.\n",
+    "       \n",
+    " - [X] **B.2 Right to be forgotten**: Do we have a mechanism through which an individual can request their personal information be removed?\n",
+    "    \n",
+    "    Participants will be informed that they may request removal of their data before analysis is finalized. This ensures individuals retain control over their participation.\n",
+    "\n",
+    "\n",
+    " - [X] **B.3 Data retention plan**: Is there a schedule or plan to delete the data after it is no longer needed?\n",
+    "\n",
+    "    Since this is a class project, the data will only be retained for the duration of the course. After the project is completed, the dataset will be deleted to reduce long-term privacy concerns.\n",
     "\n",
     "### C. Analysis\n",
-    " - [ ] **C.1 Missing perspectives**: Have we sought to address blindspots in the analysis through engagement with relevant stakeholders (e.g., checking assumptions and discussing implications with affected communities and subject matter experts)?\n",
-    " - [ ] **C.2 Dataset bias**: Have we examined the data for possible sources of bias and taken steps to mitigate or address these biases (e.g., stereotype perpetuation, confirmation bias, imbalanced classes, or omitted confounding variables)?\n",
-    " - [ ] **C.3 Honest representation**: Are our visualizations, summary statistics, and reports designed to honestly represent the underlying data?\n",
-    " - [ ] **C.4 Privacy in analysis**: Have we ensured that data with PII are not used or displayed unless necessary for the analysis?\n",
-    " - [ ] **C.5 Auditability**: Is the process of generating the analysis well documented and reproducible if we discover issues in the future?\n",
+    " - [X] **C.1 Missing perspectives**: Have we sought to address blindspots in the analysis through engagement with relevant stakeholders (e.g., checking assumptions and discussing implications with affected communities and subject matter experts)?\n",
+    "\n",
+    "    The dataset may overrepresent students with consistent access to high-speed internet and modern smartphones. We will explicitly acknowledge this limitation and discuss how access and regional differences may shape results.\n",
+    "       \n",
+    " - [X] **C.2 Dataset bias**: Have we examined the data for possible sources of bias and taken steps to mitigate or address these biases (e.g., stereotype perpetuation, confirmation bias, imbalanced classes, or omitted confounding variables)?\n",
+    "\n",
+    "    The dataset is susceptible to representation and selection bias related to the digital divide. Students without reliable internet access or compatible devices may be excluded. In addition, social media algorithms themselves reflect algorithmic bias, which may affect usage patterns differently across populations.\n",
+    "\n",
+    " - [X] **C.3 Honest representation**: Are our visualizations, summary statistics, and reports designed to honestly represent the underlying data?\n",
+    "\n",
+    "    We will present results carefully and avoid overstating findings. Correlations will not be interpreted as causal relationships, and uncertainty will be clearly communicated.\n",
+    "       \n",
+    " - [X] **C.4 Privacy in analysis**: Have we ensured that data with PII are not used or displayed unless necessary for the analysis?\n",
+    "\n",
+    "    All analysis will be conducted on anonymized data. Individual responses will not be displayed, and results will be reported only in aggregate or subgroup form.\n",
+    "    \n",
+    " - [X] **C.5 Auditability**: Is the process of generating the analysis well documented and reproducible if we discover issues in the future?\n",
+    "\n",
+    "    Analysis steps will be clearly documented so results can be reviewed or revisited if issues are identified later.\n",
     "\n",
     "### D. Modeling\n",
     " - [ ] **D.1 Proxy discrimination**: Have we ensured that the model does not rely on variables or proxies for variables that are unfairly discriminatory?\n",
     " - [ ] **D.2 Fairness across groups**: Have we tested model results for fairness with respect to different affected groups (e.g., tested for disparate error rates)?\n",
     " - [ ] **D.3 Metric selection**: Have we considered the effects of optimizing for our defined metrics and considered additional metrics?\n",
     " - [ ] **D.4 Explainability**: Can we explain in understandable terms a decision the model made in cases where a justification is needed?\n",
-    " - [ ] **D.5 Communicate limitations**: Have we communicated the shortcomings, limitations, and biases of the model to relevant stakeholders in ways that can be generally understood?\n",
+    " - [X] **D.5 Communicate limitations**: Have we communicated the shortcomings, limitations, and biases of the model to relevant stakeholders in ways that can be generally understood?\n",
+    "       \n",
+    "    We will clearly communicate the limitations of the analysis, including reliance on self-reported data, potential bias, and lack of causal inference. Findings will be framed as exploratory rather than definitive.\n",
     "\n",
     "### E. Deployment\n",
     " - [ ] **E.1 Monitoring and evaluation**: Do we have a clear plan to monitor the model and its impacts after it is deployed (e.g., performance monitoring, regular audit of sample predictions, human review of high-stakes decisions, reviewing downstream impacts of errors or low-confidence decisions, testing for concept drift)?\n",
     " - [ ] **E.2 Redress**: Have we discussed with our organization a plan for response if users are harmed by the results (e.g., how does the data science team evaluate these cases and update analysis and models to prevent future harm)?\n",
     " - [ ] **E.3 Roll back**: Is there a way to turn off or roll back the model in production if necessary?\n",
-    " - [ ] **E.4 Unintended use**: Have we taken steps to identify and prevent unintended uses and abuse of the model and do we have a plan to monitor these once the model is deployed?\n"
+    " - [X] **E.4 Unintended use**: Have we taken steps to identify and prevent unintended uses and abuse of the model and do we have a plan to monitor these once the model is deployed?\n",
+    "\n",
+    "    There is a risk that findings could be misused to judge individual student behavior. To reduce this risk, we will emphasize that results describe overall trends and should not be applied to individuals.\n"
    ]
   },
   {
@@ -287,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.9"
   },
   "vscode": {
    "interpreter": {
