Data 1 part 3(dataset description)

--- a/01-DataCheckpoint.ipynb
+++ b/01-DataCheckpoint.ipynb
@@ -117,11 +117,12 @@
     "\n",
     "For each dataset include the following information\n",
     "- Dataset #1\n",
-    "  - Dataset Name:\n",
+    "  - Dataset Name: Students Social Media Addiction and Academic Impact Dataset\n",
     "  - Link to the dataset:\n",
-    "  - Number of observations:\n",
-    "  - Number of variables:\n",
+    "  - Number of observations: 705\n",
+    "  - Number of variables: 13\n",
     "  - Description of the variables most relevant to this project\n",
+    "  - \n",
     "  - Descriptions of any shortcomings this dataset has with repsect to the project\n",
     "- Dataset #2 (if you have more than one!)\n",
     "  - same as above\n",
@@ -184,7 +185,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dataset #1 \n",
+    "### Social Media Usage and Academic Impact Among Students\n",
+    " \n",
     "\n",
     "Instructions: \n",
     "1. Change the header from Dataset #1 to something more descriptive of the dataset\n",
@@ -204,12 +206,365 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## YOUR CODE TO LOAD/CLEAN/TIDY/WRANGLE THE DATA GOES HERE\n"
+    "### A. Load Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Student_ID</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Academic_Level</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Avg_Daily_Usage_Hours</th>\n",
+       "      <th>Most_Used_Platform</th>\n",
+       "      <th>Affects_Academic_Performance</th>\n",
+       "      <th>Sleep_Hours_Per_Night</th>\n",
+       "      <th>Mental_Health_Score</th>\n",
+       "      <th>Relationship_Status</th>\n",
+       "      <th>Conflicts_Over_Social_Media</th>\n",
+       "      <th>Addicted_Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Undergraduate</td>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>Instagram</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>In Relationship</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>India</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>Twitter</td>\n",
+       "      <td>No</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Undergraduate</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>TikTok</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Complicated</td>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>High School</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>YouTube</td>\n",
+       "      <td>No</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>Facebook</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>In Relationship</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Student_ID  Age  Gender Academic_Level     Country  Avg_Daily_Usage_Hours  \\\n",
+       "0           1   19  Female  Undergraduate  Bangladesh                    5.2   \n",
+       "1           2   22    Male       Graduate       India                    2.1   \n",
+       "2           3   20  Female  Undergraduate         USA                    6.0   \n",
+       "3           4   18    Male    High School          UK                    3.0   \n",
+       "4           5   21    Male       Graduate      Canada                    4.5   \n",
+       "\n",
+       "  Most_Used_Platform Affects_Academic_Performance  Sleep_Hours_Per_Night  \\\n",
+       "0          Instagram                          Yes                    6.5   \n",
+       "1            Twitter                           No                    7.5   \n",
+       "2             TikTok                          Yes                    5.0   \n",
+       "3            YouTube                           No                    7.0   \n",
+       "4           Facebook                          Yes                    6.0   \n",
+       "\n",
+       "   Mental_Health_Score Relationship_Status  Conflicts_Over_Social_Media  \\\n",
+       "0                    6     In Relationship                            3   \n",
+       "1                    8              Single                            0   \n",
+       "2                    5         Complicated                            4   \n",
+       "3                    7              Single                            1   \n",
+       "4                    6     In Relationship                            2   \n",
+       "\n",
+       "   Addicted_Score  \n",
+       "0               8  \n",
+       "1               3  \n",
+       "2               9  \n",
+       "3               4  \n",
+       "4               7  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### A. Load dataset from data/00-raw/\n",
+    "import pandas as pd\n",
+    "\n",
+    "path = \"data/00-raw/students_social_media_addcition.csv\"\n",
+    "df_raw = pd.read_csv(path)\n",
+    "\n",
+    "df_raw.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### B. Tidiness check\n",
+    "This dataset already follows tidy data principles. Each row represents one student, and each column captures a single variable, such as demographic information, social media usage patterns, or outcome measures. There are no duplicated headers, merged cells, or columns that combine multiple variables. Because of this clear structure, no reshaping or restructuring is needed before moving on to analysis.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### C. Size of Dataset "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(705, 13)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check number of observations and variables\n",
+    "df_raw.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The dataset contains 705 observations (rows) and 13 variables (columns). Each row represents one individual student, and each column captures a specific characteristic or outcome. The variables cover demographic information (such as age, gender, academic level, and country), measures of social media usage, indicators of academic impact, sleep patterns, mental health scores, relationship status, and reported conflicts related to social media use."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### D. Missing Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Student_ID                      0\n",
+       "Age                             0\n",
+       "Gender                          0\n",
+       "Academic_Level                  0\n",
+       "Country                         0\n",
+       "Avg_Daily_Usage_Hours           0\n",
+       "Most_Used_Platform              0\n",
+       "Affects_Academic_Performance    0\n",
+       "Sleep_Hours_Per_Night           0\n",
+       "Mental_Health_Score             0\n",
+       "Relationship_Status             0\n",
+       "Conflicts_Over_Social_Media     0\n",
+       "Addicted_Score                  0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for missing values in aeach column\n",
+    "df_raw.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No missing values were detected in any column. All 705 observations contain complete information across all 13 variables. Since the dataset has no missing data, there are no observable patterns of missingness to evaluate, and no imputation or row removal was necessary.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### E. Outliers / Suspicious Entries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Student_ID', 'Age', 'Gender', 'Academic_Level', 'Country',\n",
+       "       'Avg_Daily_Usage_Hours', 'Most_Used_Platform',\n",
+       "       'Affects_Academic_Performance', 'Sleep_Hours_Per_Night',\n",
+       "       'Mental_Health_Score', 'Relationship_Status',\n",
+       "       'Conflicts_Over_Social_Media', 'Addicted_Score'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check column names\n",
+    "df_raw.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After reviewing the summary statistics, all numeric variables appear to fall within realistic and expected ranges. Ages align with typical student populations. Average daily social media usage stays within a reasonable 0–24 hour range, and reported sleep hours per night are biologically plausible. Additionally, both Mental_Health_Score and Addicted_Score remain within their intended 1–10 scales. No extreme or impossible values were identified, suggesting there are no clear outliers or suspicious entries in the dataset.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### F. Cleaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Student_ID                        int64\n",
+       "Age                               int64\n",
+       "Gender                           object\n",
+       "Academic_Level                   object\n",
+       "Country                          object\n",
+       "Avg_Daily_Usage_Hours           float64\n",
+       "Most_Used_Platform               object\n",
+       "Affects_Academic_Performance     object\n",
+       "Sleep_Hours_Per_Night           float64\n",
+       "Mental_Health_Score               int64\n",
+       "Relationship_Status              object\n",
+       "Conflicts_Over_Social_Media       int64\n",
+       "Addicted_Score                    int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check data types\n",
+    "df_raw.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After checking the data types, all variables appear to be stored in appropriate formats (integers, floats, and categorical/object types where expected). Earlier checks also showed that there are no missing values or obvious inconsistencies in the dataset. Because of this, no additional cleaning steps were necessary. The dataset appears internally consistent and ready for analysis.\n"
    ]
   },
   {
@@ -300,7 +655,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.9"
   },
   "vscode": {
    "interpreter": {
