Revise research question and add literature review
Updated research question, background information and slightly updated the hypothesis

--- a/01-DataCheckpoint.ipynb
+++ b/01-DataCheckpoint.ipynb
@@ -63,7 +63,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instructions: REPLACE the contents of this cell with your work, including any updates to recover points lost in your proposal feedback\n",
+    "Research Question: What is the correlation between daily time spent on algorithm-driven social media platforms (TikTok, Instagram Reels, YouTube Shorts) and college students' self-reported attention span, mood state, and academic productivity? Additionally, do these correlations vary significantly across different global regions?\n",
+    "\n",
     "\n"
    ]
   },
@@ -79,7 +80,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instructions: REPLACE the contents of this cell with your work, including any updates to recover points lost in your proposal feedback"
+    "TikTok, Instagram Reels, and YouTube Shorts are personalized, AI-driven short-entertainment platforms that continuously adjust to user behavior with the goal of maximizing engagement. Their recommendation systems are designed to push highly stimulating, fast-paced videos that keep users scrolling for extended periods of time. Because these platforms are now deeply integrated into the daily lives of many college students, researchers have begun examining whether frequent exposure to this type of algorithmically curated content is linked to shifts in attention, mood, and academic performance.\n",
+    "\n",
+    "In a mixed-methods study of Generation Z university students in Egypt, El-Shihy found that higher levels of social media addiction were significantly associated with greater psychological stress, reduced concentration, and lower academic engagement. Survey data revealed a positive correlation between addiction scores and students’ perceptions of academic interference. In addition, qualitative responses showed consistent themes of procrastination and difficulty maintaining focus while studying. Many participants directly connected their decreased productivity to the amount of time spent on highly engaging social media platforms, suggesting that students themselves recognize a relationship between excessive use and academic disruption.\n",
+    "\n",
+    "Pan’s research on TikTok’s personalized recommendation algorithm further highlights the role of algorithmic design. Students described the platform’s content feed as extremely relevant and difficult to disengage from, often leading to extended viewing sessions and losing track of time. Participants frequently reported procrastinating more and struggling to sustain attention on demanding tasks after prolonged use. Similarly, Henrich et al. studied adolescents and young adults between ages 13 and 21 and identified associations between long-term exposure to algorithm-driven content and shifts in attention patterns as well as mood regulation. Their findings suggest that repeated engagement with rapid, personalized content may contribute to shorter attentional cycles and heightened emotional responsiveness.\n",
+    "\n",
+    "Although existing research documents clear associations between social media addiction, algorithmic personalization, attention, and psychological outcomes, much of it focuses on single countries or specific age groups. There is still limited cross-regional research examining whether these relationships differ across global contexts. Our project expands on this work by directly measuring correlations between daily time spent on algorithm-driven short-form platforms and college students’ self-reported attention span, mood state, and academic productivity, while also testing whether the strength of these relationships varies across global regions.\n"
    ]
   },
   {
@@ -95,7 +102,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instructions: REPLACE the contents of this cell with your work, including any updates to recover points lost in your proposal feedback\n"
+    "We hypothesize that greater daily time spent on algorithm-driven short-form platforms (TikTok, Instagram Reels, and YouTube Shorts) will be associated with lower self-reported attention span and reduced academic productivity among college students. Drawing from prior research showing links between social media addiction and decreased concentration and engagement (El-Shihy), as well as reports of time loss and procrastination tied to algorithmic feeds (Pan), we expect to observe a statistically significant moderate negative correlation.\n",
+    "\n",
+    "We also predict that increased time on these platforms will be positively correlated with negative mood indicators, such as higher stress, anxiety, or emotional dysregulation. This expectation is supported by Henrich et al., who found associations between sustained exposure to algorithm-driven content and changes in mood-related outcomes.\n",
+    "\n",
+    "Finally, we anticipate that the strength of these relationships will differ across global regions, potentially reflecting cultural differences in technology use, academic expectations, and digital access patterns.\n"
    ]
   },
   {
